Updated sample text

--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -446,8 +446,8 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 <li>Finding the right balance between revolution and evolution</li>
 <li>Evolving role of the Chief Information Officer and the emergence of the Chief Digital Officer function</li>
 <li>Working in the open to accelerate change across jurisdictions</li>
-<li>Critical role that data plays in improving service delivery, and the complex policy and perception issues around its use between organizations</li>
-<li>The need to both maintain mission-critical legacy systems while being able to experiment and prototype new solutions in an agile way&nbsp;</li>
+<li>Critical role that data plays in improving service delivery, and the complex policy and public perception issues around its use between organizations</li>
+<li>The need to both maintain mission-critical legacy systems while being able to experiment and prototype new solutions in an agile way</li>
 </ul>
 
 <p>
@@ -470,14 +470,14 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 </div>
 
 <p>3-4 pages</p>
-<p>Short overview of what is meant by the topic and focus areas for the consultation discussion&nbsp;(Recruitment and retention of employees with digital skills; Building digital capacity through training;). Exploration of the key themes that came out of the consultations, highlighted with key quotes and/or examples from other jurisdictions:</p>
+<p>Short overview of what is meant by the topic and focus areas for the consultation discussion (Recruitment and retention of employees with digital skills; Building digital capacity through training). Exploration of the key themes that came out of the consultations, highlighted with key quotes and/or examples from other jurisdictions:</p>
 <ul>
-<li>Government is a black-box when it comes to recruitment from the outside - need to find better ways to connect external talent and internal opportunities</li>
-<li>Many in tech sector are mission-driven - not looking for 30yr career but want impact - short-term tours of duty, flexibility</li>
-<li>Engage with design and digital talent in universities differently and earlier - GC approach is far behind competitors in the tech sector going for the same talent pool</li>
-<li>There is an emerging &ldquo;third-way&rdquo; between simply build or buy - co-creation opportunities</li>
-<li>Need to work in different ways - not just have to come to Ottawa / innovation outposts, co-creation, partnering with employees of private sector firms,</li>
-<li>How do we leverage the talent we have in government already, enable innovation from within, strengthen it with external talent, help to integrate external talent</li>
+<li>Need to find better ways to connect external talent with internal opportunities as government HR can appear as a &ldquo;black box&rdquo; from the outside with no front door</li>
+<li>Many in tech sector are mission-driven, not looking for 30 year careers but want tangible impact with short-term flexible tours of duty</li>
+<li>Engage with design and digital talent in universities differently and earlier as the traditional GC approach lags behind competitors vying for the same talent pool</li>
+<li>There is an emerging &ldquo;third-way&rdquo; between build in-house or buy commercially that leverages models for co-creation with civic tech communities using open source code</li>
+<li>Talent shouldn&rsquo;t have to physically be in Ottawa as we lose opportunities to work with the best and brightest; different models to explore include &ldquo;innovation outposts&rdquo; that bring together different jurisdictions and external talent in a distributed manner</li>
+<li>Better leveraging the talent we already have in government by enabling innovation from within and fostering next-generation communities of practice to improve digital skills</li>
 </ul>
 
 <p>
@@ -508,11 +508,11 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 <p>3-4 pages</p>
 <p>Short overview of what is meant by the topic and focus areas for the consultation discussions (Delivering experimental prototypes and pilot projects; Agile, iterative, and scalable approaches to development; User-centred improvement and customization of digital solutions; User research, design thinking, and usability). Exploration of the key themes that came out of the consultations, highlighted with key quotes and/or examples from other jurisdictions:</p>
 <ul>
-<li>User needs to be at the centre of all service design - lots of implications of this</li>
-<li>Iterative approaches are critical to success, but hard to fit into existing govt processes</li>
-<li>Digital Design standards can drive change across the system, but they also need to be tailored to the Canadian context: Accessibility, low-bandwidth access (rural &amp; north), Official Languages</li>
-<li>The sweet spot between design thinking and digital - ripe area to explore</li>
-<li>Need for someone to play a central role in scaling innovation, connecting the dots&nbsp;</li>
+<li>Putting user needs at the centre of all service design and understanding the implications for the current culture, incentives, and structures in government</li>
+<li>The importance of iterative approaches that build on user feedback at all stages as a key success factor</li>
+<li>There is a gap that needs to be filled in the public sector at the intersection between user-centric design and agile digital prototyping and development</li>
+<li>Digital design standards can drive change across the system, but they also need to be tailored to the unique Canadian context including issues such as accessibility, low-bandwidth access (rural &amp; north), and Official Languages</li>
+<li>The need for a central role to help scale innovation across the system by connecting ideas, best practices, and opportunities within the government and between jurisdictions</li>
 </ul>
 
 <p>
@@ -535,12 +535,12 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 </div>
 
 <p>3-4 pages</p>
-<p>Short overview of what is meant by the topic and focus areas for the consultation discussions (Digital infrastructure; Enterprise digital identity and standards; Procurement modernization). Exploration of the key themes that came out of the consultations, highlighted with key quotes and/or examples from other jurisdictions:</p>
+<p>Short overview of what is meant by the topic and focus areas for the consultation discussions (Procurement modernization; Digital infrastructure; Enterprise digital identity and standards). Exploration of the key themes that came out of the consultations, highlighted with key quotes and/or examples from other jurisdictions:</p>
 <ul>
-<li>Procurement continues to be a challenge - how do we bite of small, agile pieces?</li>
-<li>Cloud and open source become key building blocks to digital innovation</li>
-<li>Digital Identity is key building block needed to enable better digital service across boundaries</li>
-<li>Broader digital literacy needed within government to ensure better decision-making&nbsp;</li>
+<li>Challenges of existing procurement practices that prevent small, iterative development with the private sector and make it difficult for start-ups and non-traditional tech players to work with government</li>
+<li>The use of cloud and open source technologies are foundational elements for digital innovation in the public sector</li>
+<li>Digital identity as a key building block needed to enable better digital service across the GC and between jurisdictions</li>
+<li>Broader digital literacy needed across government at all levels and functions in the organization to ensure smart decision-making in a world where increasingly all policy issues have a digital component to them</li>
 </ul>
 
 <p>
