Fixes for heading layout

--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -290,7 +290,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	.padded-multiline { 
 	  line-height: 1.4; 
 	  padding: 2px 0; 
-	  width: 500px;
+	  width: 530px;
 	 /* margin: 20px;
 	  margin-left: 40px;*/
 	}
@@ -298,10 +298,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	  background-color: #3a3a3a;
 	  color: #fff; 
 	  display: inline;
-	  padding: 0.55rem;
+	  padding: 1rem;
 	  
 	  /* Needs prefixing */
 	  box-decoration-break: clone;
+	}
+
+	.heading-container h2.padded-multiline.title {
+		font-size: 46px;
+	}
+	.padded-multiline.subtitle {
+		font-size: 36px;
 	}
 
 
@@ -329,12 +336,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <div class="heading-container sky">
-	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span>Beginning the Conversation…</span><br/>
-			<span>A Made-in-Canada Approach to Digital Government</span>
-		</span>
+	<h2 class="padded-multiline title">
+		<span>Beginning the&nbsp; &nbsp;Conversation…</span>
 	</h2>
+	<p class="padded-multiline subtitle">
+		<span>A Made-in-Canada Approach&nbsp; &nbsp;to Digital Government</span>
+	</p>
 </div>
 
 <h3>Executive summary</h3>
@@ -404,9 +411,7 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 
 <div class="heading-container hub">
 	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span class="inner">Starting a Conversation on a Made-in-Canada Approach</span>
-		</span>
+		<span>Starting a Conversation&nbsp; &nbsp;on a Made-in-Canada&nbsp; &nbsp;Approach</span>
 	</h2>
 </div>
 
@@ -433,9 +438,7 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 
 <div class="heading-container calgary">
 	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span class="inner">Organizing to Deliver Digital</span>
-		</span>
+		<span>Organizing to&nbsp; &nbsp;Deliver&nbsp;Digital</span>
 	</h2>
 </div>
 
@@ -463,9 +466,7 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 
 <div class="heading-container pei">
 	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span class="inner">Digital Talent</span>
-		</span>
+		<span>Digital Talent</span>
 	</h2>
 </div>
 
@@ -499,9 +500,7 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 
 <div class="heading-container montreal">
 	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span class="inner">Digital Service Design and Delivery</span>
-		</span>
+		<span>Digital Service Design and&nbsp; &nbsp;Delivery</span>
 	</h2>
 </div>
 
@@ -528,9 +527,7 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 
 <div class="heading-container vancouver">
 	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span class="inner">Putting in Place the Right Foundations</span>
-		</span>
+		<span>Putting in Place the&nbsp; &nbsp;Right&nbsp;Foundations</span>
 	</h2>
 </div>
 
@@ -562,9 +559,7 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 
 <div class="heading-container ottawa">
 	<h2 class="padded-multiline">
-		<span class="wrap">
-			<span class="inner">Continuing the Conversation</span>
-		</span>
+		<span>Continuing the&nbsp; &nbsp;Conversation</span>
 	</h2>
 </div>
 
