"Project has moved" alert message
Now that meetingcostcalculator.ca is online.
https://github.com/sboots/meetingcostcalculator

--- a/projects/meetingcost/index.html
+++ b/projects/meetingcost/index.html
@@ -25,6 +25,11 @@
 
 		<div class="container">
 
+			<div class="alert alert-info" style="margin-top: 10px;">
+				<b>This project has moved!</b><br/>
+				The latest version of the Meeting Cost Calculator is now online at <a href="http://meetingcostcalculator.ca/" class="alert-link">meetingcostcalculator.ca</a>, and includes new features and data. Please update your bookmarks!
+			</div>
+
 			<div class="title-top">
 				<span>Federal Public Service</span>
 				<h1>Meeting Cost Calculator</h1>
